Regenerate thumbnails when the files are modified outside of Gwenview

BUG:208983